--- a/backend/app/pyproject.toml
+++ b/backend/app/pyproject.toml
@@ -24,6 +24,7 @@ sqlalchemy = "^1.3.16"
 PyMySQL = "^1.0.2"
 pytest = "^5.4.1"
 python-jose = {extras = ["cryptography"], version = "^3.1.0"}
+mariadb = "^1.0.11"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.770"
